new functionalities and validations

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         </div>
         <p id="aleatorio"></p>
         <button id="btn">Gerar número</button>
+        <p id="rodada">Rodada 1</p>
         <div class="jogadores">
             <div>
                 <h2 id="jog1">Jogador 1</h2>
@@ -32,7 +33,8 @@
         </div>
         <p id="mensagem"></p>
         <!--Botão que reseta tudo-->
-        <button id="reiniciar">Começar nova rodada</button>
+        <button id="nova-rodada">Começar nova rodada</button>
+        <button id="terminar-jogo"><a href="fim_jogo.html" target="_self">Terminar jogo</a></button>
     </section>
 
     <script src="script.js"></script>
