new functionalities and validations

--- a/fim_jogo.html
+++ b/fim_jogo.html
@@ -7,6 +7,10 @@
     <title>Fim do jogo</title>
 </head>
 <body>
-    <h1>Fim do jogo</h1>
+    <h1>Obrigado por jogar o meu jogo! (emoji)</h1>
+    <p>A ideia deste projeto foi 100% minha, com o intuito de pôr em prática alguns conhecimentos básicos de JavaScript.</p>
+    <p>Me segue lá no (ícone GH) e manda solicitação lá no (ícone face). Se tiver alguma dica para melhorar o projeto, será muito bom.</p>
+
+    <!--Minha foto e todo este texto bonito lado a lado numa div com box shadow-->
 </body>
 </html>
