adding CSS and create fim.html | fim.css

--- a/fim_jogo.html
+++ b/fim_jogo.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="_css/reset.css">
+    <link rel="stylesheet" href="_css/fim.css">
     <title>Fim do jogo</title>
 </head>
 <body>
-    <h1>Por terminar...</h1>
+    <div id="fim-jogo">
+        <h1>Projeto desenvolvido para colocar em prática alguns conhecimentos básicos de JavaScript</h1>
+        <div>
+            <img src="img.jpg" alt="minha foto">
+            <div id="sobre-mim">
+                <p class="sobre">Eu sou o Vandinelson Gomes. Cursando Engenharia de Informática (2019 - 2023). Estudando muito o Desenvolvimento Web Frontend para trabalhar nesta área que estou adorando a cada dia, o mais breve possível.</p>
+                <div class="sobre" id="redes-sociais">
+                    <a href="https://github.com/vandinelsonrocha" target="_blank"><ion-icon name="logo-github"></ion-icon></a>
+                    <a href=""><ion-icon name="logo-linkedin"></ion-icon></a>
+                    <a href=""><ion-icon name="logo-facebook"></ion-icon></a>
+                </div>
+                <p id="email"><a class="icone-email" href=""><ion-icon class="a" name="logo-facebook">
+                    </ion-icon></a>vandInforma.tic@gmail.com
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <!--Ícones do ionicons.com-->
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 </body>
 </html>
