finishing the project

--- a/fim_jogo.html
+++ b/fim_jogo.html
@@ -17,11 +17,12 @@
                 <p class="sobre">Eu sou o Vandinelson Gomes. Cursando Engenharia de Informática (2019 - 2023). Estudando muito o Desenvolvimento Web Frontend para trabalhar nesta área que estou adorando a cada dia, o mais breve possível.</p>
                 <div class="sobre" id="redes-sociais">
                     <a href="https://github.com/vandinelsonrocha" target="_blank"><ion-icon name="logo-github"></ion-icon></a>
-                    <a href=""><ion-icon name="logo-linkedin"></ion-icon></a>
-                    <a href=""><ion-icon name="logo-facebook"></ion-icon></a>
+                    <a href="https://www.linkedin.com/in/vandy-gomes
+                    " target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
+                    <a href="https://www.facebook.com/vandy.gomes.739" target="_blank"><ion-icon name="logo-facebook"></ion-icon></a>
                 </div>
-                <p id="email"><a class="icone-email" href=""><ion-icon class="a" name="logo-facebook">
-                    </ion-icon></a>vandInforma.tic@gmail.com
+                <p id="email">
+                    <ion-icon name="mail-outline" class="icone-email"></ion-icon>vandInforma.tic@gmail.com
                 </p>
             </div>
         </div>
