--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="_css/reset.css">
-    <link rel="stylesheet" href="_css/style.css">
+    <link rel="stylesheet" href="12-Jogo_da_sorte/_css/reset.css">
+    <link rel="stylesheet" href="12-Jogo_da_sorte/_css/style.css">
     <title>Jogo da sorte</title>
 </head>
 <body onload="carregarPagina()">
