finishing the project

--- a/fim_jogo.html
+++ b/fim_jogo.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="fim.css">
+    <link rel="stylesheet" href="_css/reset.css">
+    <link rel="stylesheet" href="_css/fim_jogo.css">
     <title>Fim do jogo</title>
 </head>
 <body>
